tests/models/struct/unnamed/usize/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    usize
);
fn main() {}
