tests/models/struct/unnamed/usize/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    usize
);
fn main() {}
